Upgrade to Java 21 and Spring Boot 3 (#806)
* Move to GraalVM and Java 17

* Update Docker base image to GraalVM with js

* Add checkstyle

* Upgrade to Spring Boot 3

* End upgrade Spring Boot 3

* Spring Boot 3 and Java 21

* Update CI

* Fix lint and add Swagger UI doc

* Fix sonar

* Fix sonar

* Update switch to if else