@@ -18,12 +18,14 @@
 
 package com.michelin.suricate.controllers;
 
-import com.michelin.suricate.properties.ApplicationProperties;
 import com.michelin.suricate.model.enums.AuthenticationProvider;
+import com.michelin.suricate.properties.ApplicationProperties;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import java.util.ArrayList;
+import java.util.List;
 import org.apache.commons.lang3.EnumUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -33,10 +35,9 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
-
+/**
+ * Configuration controller.
+ */
 @RestController
 @RequestMapping("/api")
 @Tag(name = "Configuration", description = "Configuration Controller")
@@ -46,33 +47,37 @@ public class ConfigurationController {
 
     /**
      * Get the authentication providers defined in the backend (database, ldap, social providers, ...)
+     *
      * @return The authentication provider
      */
     @Operation(summary = "Get the server configuration for authentication providers (DB, LDAP, Social providers)")
     @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "OK")
+        @ApiResponse(responseCode = "200", description = "OK")
     })
     @GetMapping(value = "/v1/configurations/authentication-providers")
     public ResponseEntity<List<AuthenticationProvider>> getAuthenticationProviders() {
         List<AuthenticationProvider> providers = new ArrayList<>();
 
         if (StringUtils.isNotBlank(applicationProperties.getAuthentication().getProvider())) {
-            providers.add(AuthenticationProvider.valueOf(applicationProperties.getAuthentication().getProvider().toUpperCase()));
+            providers.add(
+                AuthenticationProvider.valueOf(applicationProperties.getAuthentication().getProvider().toUpperCase()));
         }
 
         if (applicationProperties.getAuthentication().getSocialProviders() != null) {
-            List<AuthenticationProvider> socialProviders = applicationProperties.getAuthentication().getSocialProviders()
+            List<AuthenticationProvider> socialProviders =
+                applicationProperties.getAuthentication().getSocialProviders()
                     .stream()
-                    .filter(socialProvider -> EnumUtils.isValidEnum(AuthenticationProvider.class, socialProvider.toUpperCase()))
+                    .filter(socialProvider -> EnumUtils.isValidEnum(AuthenticationProvider.class,
+                        socialProvider.toUpperCase()))
                     .map(socialProvider -> AuthenticationProvider.valueOf(socialProvider.toUpperCase()))
-                    .collect(Collectors.toList());
+                    .toList();
 
             providers.addAll(socialProviders);
         }
 
         return ResponseEntity
-                .ok()
-                .contentType(MediaType.APPLICATION_JSON)
-                .body(providers);
+            .ok()
+            .contentType(MediaType.APPLICATION_JSON)
+            .body(providers);
     }
 }
