@@ -1,5 +1,10 @@
 package com.michelin.suricate.controllers;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
+
 import com.michelin.suricate.model.dto.api.widget.WidgetRequestDto;
 import com.michelin.suricate.model.dto.api.widget.WidgetResponseDto;
 import com.michelin.suricate.model.entities.Widget;
@@ -7,6 +12,8 @@ import com.michelin.suricate.model.enums.WidgetAvailabilityEnum;
 import com.michelin.suricate.services.api.WidgetService;
 import com.michelin.suricate.services.mapper.WidgetMapper;
 import com.michelin.suricate.utils.exceptions.ObjectNotFoundException;
+import java.util.Collections;
+import java.util.Optional;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -17,15 +24,6 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-
-import java.util.Collections;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class WidgetControllerTest {
@@ -47,25 +45,25 @@ class WidgetControllerTest {
         widget.setId(1L);
 
         when(widgetService.getAll(any(), any()))
-                .thenReturn(new PageImpl<>(Collections.singletonList(widget)));
-        when(widgetMapper.toWidgetWithoutCategoryParametersDTO(any()))
-                .thenReturn(widgetResponseDto);
+            .thenReturn(new PageImpl<>(Collections.singletonList(widget)));
+        when(widgetMapper.toWidgetWithoutCategoryParametersDto(any()))
+            .thenReturn(widgetResponseDto);
 
         Page<WidgetResponseDto> actual = widgetController.getWidgets("search", Pageable.unpaged());
 
         assertThat(actual).isNotEmpty();
         assertThat(actual.get()).hasSize(1);
-        assertThat(actual.get().collect(Collectors.toList()).get(0)).isEqualTo(widgetResponseDto);
+        assertThat(actual.get().toList().get(0)).isEqualTo(widgetResponseDto);
     }
 
     @Test
     void shouldGetOneByIdNotFound() {
         when(widgetService.findOne(any()))
-                .thenReturn(Optional.empty());
+            .thenReturn(Optional.empty());
 
         assertThatThrownBy(() -> widgetController.getOneById(1L))
-                .isInstanceOf(ObjectNotFoundException.class)
-                .hasMessage("Widget '1' not found");
+            .isInstanceOf(ObjectNotFoundException.class)
+            .hasMessage("Widget '1' not found");
     }
 
     @Test
@@ -77,9 +75,9 @@ class WidgetControllerTest {
         widget.setId(1L);
 
         when(widgetService.findOne(any()))
-                .thenReturn(Optional.of(widget));
-        when(widgetMapper.toWidgetDTO(any()))
-                .thenReturn(widgetResponseDto);
+            .thenReturn(Optional.of(widget));
+        when(widgetMapper.toWidgetDto(any()))
+            .thenReturn(widgetResponseDto);
 
         ResponseEntity<WidgetResponseDto> actual = widgetController.getOneById(1L);
 
@@ -93,11 +91,11 @@ class WidgetControllerTest {
         widgetRequestDto.setWidgetAvailability(WidgetAvailabilityEnum.ACTIVATED);
 
         when(widgetService.updateWidget(any(), any()))
-                .thenReturn(Optional.empty());
+            .thenReturn(Optional.empty());
 
         assertThatThrownBy(() -> widgetController.updateWidget(1L, widgetRequestDto))
-                .isInstanceOf(ObjectNotFoundException.class)
-                .hasMessage("Widget '1' not found");
+            .isInstanceOf(ObjectNotFoundException.class)
+            .hasMessage("Widget '1' not found");
     }
 
     @Test
@@ -109,7 +107,7 @@ class WidgetControllerTest {
         widget.setId(1L);
 
         when(widgetService.updateWidget(any(), any()))
-                .thenReturn(Optional.of(widget));
+            .thenReturn(Optional.of(widget));
 
         ResponseEntity<Void> actual = widgetController.updateWidget(1L, widgetRequestDto);
 
